--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="yandex-verification" content="14191351db0e2b00" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
 <link href="style.css" rel="stylesheet"/>
 
